--- a/Weather_1/package.json
+++ b/Weather_1/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "weather-comparison-table",
+  "name": "weather-forecast",
   "version": "1.0.0",
-  "description": "A comparison table for weather metrics of 3+ cities using OpenWeatherMap API data.",
+  "description": "A 5-day weather forecast component using OpenWeatherMap's forecast endpoint",
   "main": "src/index.ts",
   "scripts": {
     "test": "jest"
@@ -10,9 +10,9 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
   }
 }
