--- a/Weather_1/package.json
+++ b/Weather_1/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "weather-forecast",
+  "name": "weather-app",
   "version": "1.0.0",
-  "description": "A 5-day weather forecast component using OpenWeatherMap's forecast endpoint",
-  "main": "src/index.ts",
+  "description": "A weather application with autocomplete city search feature",
+  "main": "index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "jest"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "jest": "^27.0.6",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5"
+    "@types/express": "^4.17.11",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
