--- a/Weather_1/package.json
+++ b/Weather_1/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "weather-app",
+  "name": "weather-widget",
   "version": "1.0.0",
-  "description": "A weather application with autocomplete city search feature",
-  "main": "index.js",
+  "description": "A widget that detects the user’s location and displays real-time weather data.",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4",
+    "typescript": "^4.1.3",
     "jest": "^26.6.3",
-    "supertest": "^6.1.3"
+    "ts-jest": "^26.5.4"
   }
 }
