Implement W1-1: Implement Multi-City Weather Comparison Table

--- a/Weather_1/tsconfig.json
+++ b/Weather_1/tsconfig.json
@@ -1,8 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "noImplicitAny": true,
     "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true
-  }
+    "target": "es6",
+    "jsx": "react"
+  },
+  "include": [
+    "./src/**/*"
+  ]
 }
