--- a/Weather_1/package.json
+++ b/Weather_1/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "weather-widget",
+  "name": "weather-comparison",
   "version": "1.0.0",
-  "description": "A widget that detects the user’s location and displays real-time weather data.",
-  "main": "src/index.ts",
+  "description": "A comparison table for weather metrics of 3+ cities",
+  "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "tsc && node ./dist/index.js"
   },
   "dependencies": {
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "typescript": "^4.1.3",
+    "@types/node": "^14.14.31",
     "jest": "^26.6.3",
-    "ts-jest": "^26.5.4"
+    "typescript": "^4.2.3"
   }
 }
