--- a/Weather_1/package.json
+++ b/Weather_1/package.json
@@ -1,18 +1,19 @@
 {
   "name": "weather-comparison",
   "version": "1.0.0",
-  "description": "A comparison table for weather metrics of 3+ cities",
-  "main": "index.js",
+  "description": "A comparison table for weather metrics of 3+ cities using OpenWeatherMap API data.",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "jest",
-    "start": "tsc && node ./dist/index.js"
+    "start": "ts-node src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
-    "jest": "^26.6.3",
-    "typescript": "^4.2.3"
+    "@types/jest": "^26.0.24",
+    "jest": "^27.2.0",
+    "typescript": "^4.4.2"
   }
 }
