--- a/Weather_1/tsconfig.json
+++ b/Weather_1/tsconfig.json
@@ -1,13 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "commonjs",
     "target": "es6",
-    "jsx": "react"
-  },
-  "include": [
-    "./src/**/*"
-  ]
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true
+  }
 }
