--- a/Weather_1/package.json
+++ b/Weather_1/package.json
@@ -4,19 +4,14 @@
   "description": "A comparison table for viewing weather metrics for multiple cities using OpenWeatherMap API data.",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "jest": "^27.0.6",
-    "supertest": "^6.1.3",
-    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
 }
